# formation-graphics

./: .gitignore  README.md  UBIQUITOUS_LANGUAGE.md  config_builder.html  main.py  pyproject.toml  solver_schedule.py
config/: game_config.example.json
formation_graphics/: __init__.py  cli.py  config_model.py  core.py  planning.py  publishing.py  solver.py  web.py
tests/: test_cli_seam.py  test_config_builder_backend.py  test_planner_seam.py  test_planning_publishing_split.py  test_pyodide_app.py  test_solver_uses_shared_publisher.py  test_typed_match_config.py  test_web_api.py
