[project]
name = "formation-graphics"
version = "0.1.0"
description = "Generate 7v7 formation graphics, schedules, and printable sheets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "ortools>=9.15.6755",
]

[project.scripts]
formation-graphics = "formation_graphics.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["formation_graphics*"]
exclude = ["output*", "config*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["output", "config", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
